# glade

./: .gitignore  Cargo.toml  README.md
css/: base.css  stylance.scss
demo/: Cargo.toml  Dioxus.toml  README.md
demo/css/: demo.css
demo/src/: main.rs
demo/src/pages/: chat.rs  data.rs  feedback.rs  form.rs  layout.rs  loading.rs  misc.rs  mod.rs  navigation.rs  primitives.rs
src/: hooks.rs  lib.rs  utils.rs
src/components/: accordion.module.scss  accordion.rs  alert.module.scss  alert.rs  alert_dialog.module.scss  alert_dialog.rs  app_shell.module.scss  app_shell.rs  aspect_ratio.module.scss  aspect_ratio.rs  attachment_chip.module.scss  attachment_chip.rs  avatar.module.scss  avatar.rs  badge.module.scss  badge.rs  breadcrumb.module.scss  breadcrumb.rs  button.module.scss  button.rs  button_group.module.scss  button_group.rs  calendar.module.scss  calendar.rs  card.module.scss  card.rs  carousel.module.scss  carousel.rs  chat_bubble.module.scss  chat_bubble.rs  checkbox.module.scss  checkbox.rs  code_block.module.scss  code_block.rs  code_execution_result.module.scss  code_execution_result.rs  collapsible.module.scss  collapsible.rs  color_swatch.module.scss  color_swatch.rs  (+135 more)
