[package]
name = "glade-dioxus-demo"
version = "0.1.0"
edition = "2024"
description = "Demo application showcasing Glade UI components"

[dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
glade-dioxus = { path = ".." }
web-sys = { version = "0.3", features = ["Window", "Location", "History", "UrlSearchParams"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["server"]
server = ["dioxus/server"]
web = ["dioxus/web", "glade-dioxus/web", "web-sys", "wasm-bindgen"]
